[package]
name = "cornerstone"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A behavior tree library"
homepage = "https://github.com/passchaos/cornerstone"
repository = "https://github.com/passchaos/cornerstone"
documentation = "https://docs.rs/crate/cornerstone/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
serde = "1.0.196"
serde_json = "1.0.113"
regex = "1.10.3"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
